--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="crf.myloginapp.SettingsActivity"
-    android:background="#fffeffbf">
+    android:background="@android:color/white">
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,8 +37,7 @@
         android:id="@+id/button"
         android:gravity="center"
         android:layout_below="@+id/pET"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/background_light" />
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:layout_width="fill_parent"
@@ -49,7 +48,6 @@
         android:gravity="center"
         android:textSize="@dimen/abc_text_size_headline_material"
         android:textStyle="bold"
-        android:background="#fffeffbf"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
